--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -59,6 +59,9 @@
       <p class="lead my-3 mega-subtitle" >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo.</p>
       <button type="button" class="mega-button">POUR ON THE GO</button>
     </div>
+    <div class="col-md-12 px-0 mega-explore">
+      <p>EXPLORE <%= link_to image_tag("arrow-right-short.svg"), '#'%> </p>
+    </div>       
   </div>  
 
   <main class="container">
