--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,7 +47,7 @@
 }
 
 .hero-image{
-  background-image: url("2132C2_6.png");
+  background-image: asset_url("2132C2_6.png");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
