--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <nav class="navbar navbar-expand-lg navbar-light ">
   <!--  Show this only on mobile to medium screens  -->
-    <%= link_to image_tag("ESPRO Logo.svg", width: "100"), root_path, class: "navbar-brand d-lg-none"%>
+    <%= link_to image_tag("ESPRO Logo.svg"), root_path, class: "navbar-brand d-lg-none"%>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
         </li>
       </ul>        
   <!--   Show this only lg screens and up   -->
-      <%= link_to image_tag("ESPRO Logo.svg", width: "100"), root_path, class: "navbar-brand"%>
+      <%= link_to image_tag("ESPRO Logo.svg"), root_path, class: "navbar-brand"%>
           
       <ul class="navbar-nav">
         <li class="nav-item">
